<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_Config" Id="{afc2d24e-82f6-49ff-b5dc-4e8c09b3ad0e}">
    <Declaration><![CDATA[TYPE ST_Config :
STRUCT
	rLaenge: LREAL;
	rBreite: LREAL;
	rDicke: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>